--- a/src/app/cardwall-base/cardwall-base.component.html
+++ b/src/app/cardwall-base/cardwall-base.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="!(loading$ | async); else loading">
-  <div>I have a board</div>
+  <div>I am board</div>
 </div>
 
 <ng-template #loading>
